# swift-lite

./: .env  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
SwiftDetLibRs/: Cargo.toml
SwiftDetLibRs/.cargo/: config
SwiftDetLibRs/onnxruntime-sys-patch/: Cargo.toml  build.rs
SwiftDetLibRs/onnxruntime-sys-patch/src/: lib.rs
SwiftDetLibRs/src/: lib.rs
back/: .gitignore  common.py  config.py  data.db  det.py  main.py  master.py  pyproject.toml  start.sh  stop.sh
det/: demo.py  export_onnx.py  master.py  obfs_number.py  obfuscated.py  onnx-worker.py  san.py  sysio.py  torch-worker.py  wrapper.py
front/: .gitignore  vite.config.js
front/src/: App.vue
front/src/components/: ParamsForm.vue  RecentList.vue
front/src/router/: index.js
front/src/views/: EditorView.vue  HomeView.vue
rs-worker/: Cargo.toml
rs-worker/src/: detect.rs  main.rs  net.rs  nms.rs
src/: App.vue  main.js  main.rs  models.rs
src/components/: AprilFool.vue  ChangeLog.vue  LazyNumber.vue  LazySlider.vue  ParamsForm.vue  RecentList.vue  Workers.vue
src/views/: EditorView.vue  HomeView.vue
