[package]
name = "swift-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-plus-static-files = { git = "https://github.com/john01dav/actix-plus" }
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
crossbeam = "0.8.2"
ctrlc = "3.4.0"
dotenvy = "0.15.7"
dzi = "0.2.3"
futures = "0.3.28"
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-actix", "uuid", "runtime-actix-native-tls", "chrono"] }
swift_det_lib = { path = "./SwiftDetLibRs" } 
uuid = { version = "1.3.4", features = ["v4", "serde"] }
