[package]
name = "swift_det_lib"
version = "0.1.0"
edition = "2021"
authors = ["lihe07"]
description = "Swift detecotor for rust-lang"

[lib]
#crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.1"
nshare = {version = "0.6.0", features = ["image", "ndarray"]}
onnxruntime-sys = "0.0.14"
onnxruntime = "0.0.14"
image = "0.23.14"
num_cpus = "1.0"
serde = {version="1.0.136", features = ["derive"]}

[profile.release]
# 一些优化内容
lto = "fat"
codegen-units = 1
panic = "abort"

[patch.crates-io]
onnxruntime-sys = { package = "onnxruntime-sys-patch" }
