[package]
name = "rs-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
goldberg = "0.1.0"
image = "0.25"
itertools = "0.14.0"
ndarray = "0.16"
ort = "=2.0.0-rc.10"
reqwest = { version = "0.12.20", features = [
  "charset",
  "http2",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
