[package]
name = "rs-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
goldberg = "0.1.0"
image = "0.25"
itertools = "0.14.0"
ndarray = "0.17"
ort = "=2.0.0-rc.12"
reqwest = { version = "0.13", features = [
  "charset",
  "http2",
  "rustls",
  "webpki-roots",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
